# Talkye-Scriber

./: -  .env.example  .gitignore  LICENSE  README.md  build-appimage.sh  build-deb.sh
.kiro/plans/: appimage-distribution.md
.kiro/steering/: architecture.md  coding-standards.md  design-system.md  project-structure.md  release-process.md
app/: README.md  install-desktop.sh  pubspec.yaml
app/assets/: vui-animation.json
app/integration_test/: simple_test.dart
app/lib/: desktop_integration.dart  main.dart  settings.dart  sidebar.dart  status_bar.dart  theme.dart  updater.dart  version.dart  voice_names.dart
app/lib/screens/: chat_screen.dart  dictate_screen.dart  interpreter_screen.dart  key_picker_dialog.dart  settings_screen.dart  setup_screen.dart  voice_screen.dart
app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: engine.dart  engine.freezed.dart  simple.dart
app/linux/: CMakeLists.txt  com.talkye.meet.desktop  com.talkye.scriber.desktop
app/linux/flutter/: generated_plugins.cmake
app/linux/runner/: my_application.cc
app/rust/: Cargo.toml
app/rust/.cargo/: config.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: engine.rs  mod.rs  simple.rs
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/android/src/main/: AndroidManifest.xml
app/rust_builder/ios/: rust_lib_talkye_app.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: rust_lib_talkye_app.podspec
app/rust_builder/windows/: CMakeLists.txt
core/: Cargo.toml
core/.cargo/: config.toml
core/src/: accumulator.rs  audio.rs  config.rs  engine.rs  lib.rs  main.rs  pipeline.rs  stt.rs  translate.rs  tts.rs  vad.rs  voice.rs
core/src/audio/: capture.rs  mod.rs  playback.rs  virtual.rs
core/src/stt/: deepgram.rs  mod.rs  parakeet.rs
core/src/tts/: mod.rs  pocket.rs  sidecar.rs
docs/: README.md  architecture.md  bidirectional-interpreter.md  cost-analysis.md  desktop-dictation.md  inworld-tts-postmortem.md  live-interpreter-status.md  live-translation.md  local-stt-research.md  meeting-assistant-design.md  phase2-plan.md  scriber-cleanup-plan.md  sidecar-cleanup-plan.md  ux-vision.md  whisper-local.md
docs/archive/: live-interpreter-status.md  phase1-complete.md  phase2-plan.md  pocket-tts-analysis.md  product-live-interpreter.md  test-script.md  tts-distortion-investigation.md  whisper-local.md
flatpak/: com.talkye.scriber.metainfo.xml
prototype/: README.md  core.py  desktop.py  record_voice.sh  requirements.txt  server.py  setup.sh  test_deepgram.py  train_wakeword.py  whisper-p2t.service
prototype/docs/: cost-analysis.md  wake-word-training.md
prototype/static/: widget.html
sidecar/: audio.py  chatterbox_worker.py  commands.py  config.py  core.py  desktop.py  keyboard.py  llm_groq.py  llm_local.py  platform_utils.py  requirements-base.txt  requirements.txt  server.py  setup.sh  start.sh  transcribe.py  tts.py  tts_chatterbox.py  vad.py  voice_chat.py
snap/: snapcraft.yaml
snap/gui/: talkye-scriber.desktop
voices/builtin/: alba_announcer.safetensors  alba_casual.safetensors  alba_merchant.safetensors  cosette.safetensors  marius.safetensors  unmute_default.safetensors  unmute_developer.safetensors  unmute_developpeuse.safetensors  unmute_fabien.safetensors  unmute_p329.safetensors  vctk_p225_f.safetensors  vctk_p226_m.safetensors  vctk_p228_f.safetensors  vctk_p231_f.safetensors  vctk_p232_m.safetensors  vctk_p236_f.safetensors  vctk_p239_f.safetensors  vctk_p243_m.safetensors  vctk_p245_m.safetensors  vctk_p250_f.safetensors  vctk_p251_m.safetensors  vctk_p252_m.safetensors  vctk_p257_f.safetensors  vctk_p259_m.safetensors  vctk_p264_f.safetensors  vctk_p270_m.safetensors  vctk_p272_m.safetensors  vctk_p276_f.safetensors  vctk_p278_m.safetensors  vctk_p286_m.safetensors  vctk_p294_f.safetensors  vctk_p304_m.safetensors
wakeword/: Cargo.toml
wakeword/src/: main.rs
