[package]
name = "talkye-core"
version = "0.1.0"
edition = "2024"
description = "Real-time voice translation engine for Talkye Meet"

[[bin]]
name = "talkye"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio I/O
cpal = "0.15"

# WebSocket (Deepgram STT)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
http = "1"
url = "2"

# HTTP (Groq translation)
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TTS — voice cloning, streaming, CPU-only
pocket-tts = "0.6"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Bytes for audio buffers
bytes = "1"

# Futures utilities
futures-util = "0.3"
