[package]
name = "talkye-core"
version = "0.2.1"
edition = "2024"
description = "Real-time voice translation engine for Talkye Meet"
default-run = "talkye"

[features]
default = []

[[bin]]
name = "talkye"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio I/O
cpal = "0.15"

# WebSocket (Deepgram STT)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
http = "1"
url = "2"

# HTTP (Groq translation)
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TTS — voice cloning, streaming, CPU-only
# Note: mkl feature causes hgemm_ linker error on Linux. Using native CPU opts instead.
pocket-tts = "0.6"

# Local STT — NVIDIA Parakeet TDT v3 (25 EU languages, ONNX Runtime)
parakeet-rs = "0.3"

# ONNX Runtime — shared with parakeet-rs, used for Silero VAD
ort = "=2.0.0-rc.11"
ndarray = "0.17"

# Tensor ops (used by precompute_voice binary)
candle-core = "0.9"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Bytes for audio buffers
bytes = "1"

# Futures utilities
futures-util = "0.3"

# Optimize dependencies even in dev builds (critical for pocket-tts / candle)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
