[package]
name = "talkye-wakeword"
version = "0.1.0"
edition = "2021"
description = "Rustpotter-based wake word detection for Talkye"

[[bin]]
name = "wakeword"
path = "src/main.rs"

[dependencies]
rustpotter = { version = "3.0.2", default-features = false }
half = "=2.3.1"
hound = "3.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
