[package]
name = "rust_lib_talkye_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
talkye-core = { path = "../../core" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Optimize dependencies even in dev/debug builds (critical for pocket-tts / candle / ort)
[profile.dev.package."*"]
opt-level = 2

# Release profile — must match core/Cargo.toml for identical performance
# Note: panic="abort" omitted because cdylib needs unwinding support
[profile.release]
lto = "fat"
codegen-units = 1
